k8s/appdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vproapp
  labels:
    app: vproapp
spec:
  replicas: 1

  selector:
    matchLabels:
      app: vproapp

  template:
    metadata:
      labels:
        app: vproapp
        
    spec:
      containers:
        - name: vproapp
          image: 996818459618.dkr.ecr.us-east-1.amazonaws.com/vprofile-app
          imagePullPolicy: Always

          ports:
            - containerPort: 8080
              name: vproapp-port
