k8s/db-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deploy
  labels:
    app: vprodb
spec:
  replicas: 1

  selector:
    matchLabels:
      app: vprodb

  template:
    metadata:
      labels:
        app: vprodb
        
    spec:
      containers:
        - name: vpro-db
          image: 996818459618.dkr.ecr.us-east-1.amazonaws.com/vprofile-db:fe4d374c60d01724387ca1db7c4a321da3936c5d
          imagePullPolicy: Always

          volumeMounts:
            - mountPath: /var/lib/mysql
              name: vpro-db-data

          ports:
            - name: vprodb-port
              containerPort: 3306

      volumes:
        - name: vpro-db-data
          persistentVolumeClaim:
            claimName: db-pv-claim
