k8s/rmqdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprormq
  labels:
    app: vprormq

spec:
  replicas: 1
  selector:
    matchLabels:
      app: vprormq
      
  template:
    metadata:
      labels:
        app: vprormq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq

          ports:
            - containerPort: 5672
              name: vprormq-port
